Fixed Create/Manage Profile dialog spacing due to Mac bug. Updated margin to account for added space due to border added.
Review URL: https://chromiumcodereview.appspot.com/10832120

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@149740 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 41831be5044875a88a9292cf4fdd09d28437a3b2

--- a/chrome/browser/resources/options2/manage_profile_overlay.css
+++ b/chrome/browser/resources/options2/manage_profile_overlay.css
@@ -8,7 +8,7 @@
 
 .profile-icon-grid-item {
   height: 31px;
-  margin: 4px 6px;
+  margin: 2px 4px;
   padding: 4px;
   width: 38px;
 }
